; ModuleID = '/home/carl/AnghaBench/timescaledb/src/extr_compression_with_clause.c_ts_compress_hypertable_parse_segment_by.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/extr_compression_with_clause.c_ts_compress_hypertable_parse_segment_by.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@CompressSegmentBy = common dso_local global i64 0, align 8
@NIL = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @ts_compress_hypertable_parse_segment_by(%struct.TYPE_3__* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %8 = load i64, i64* @CompressSegmentBy, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i64 %8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = icmp eq i32 %11, 0
  br i1 %12, label %13, label %23

13:                                               ; preds = %2
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %15 = load i64, i64* @CompressSegmentBy, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i64 %15
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  store i32 %18, i32* %6, align 4
  %19 = load i32, i32* %6, align 4
  %20 = call i32 @TextDatumGetCString(i32 %19)
  %21 = load i32*, i32** %5, align 8
  %22 = call i32* @parse_segment_collist(i32 %20, i32* %21)
  store i32* %22, i32** %3, align 8
  br label %25

23:                                               ; preds = %2
  %24 = load i32*, i32** @NIL, align 8
  store i32* %24, i32** %3, align 8
  br label %25

25:                                               ; preds = %23, %13
  %26 = load i32*, i32** %3, align 8
  ret i32* %26
}

declare dso_local i32* @parse_segment_collist(i32, i32*) #1

declare dso_local i32 @TextDatumGetCString(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
